--- a/tests.html
+++ b/tests.html
@@ -13,7 +13,8 @@
   <script src='./js/shopping_list_item.js'></script>
   <script src='./js/shopping_list.js'></script>
   <script>mocha.setup('bdd')</script>
-  <script src='./js/shopping_list_test.js'></script>
+  <script src='/js/tests/shopping_list_test.js'></script>
+  <script src='/js/app.js'></script>
   <script>
     mocha.run()
   </script>
